@@ -8,7 +8,7 @@
   <tr align="center" bgcolor="#e4e4e4">
     <td>
       <h1><big><font color="#3c34ec"><i>NuttX RTOS</i></font></big></h1>
-      <p>Last Updated: March 9, 2008</p>
+      <p>Last Updated: March 10, 2008</p>
     </td>
   </tr>
 </table>
@@ -464,7 +464,7 @@
   These unreleased changes are listed <a href="#pendingchanges">here</a>.
 </p>
 <p>
-  nuttx-0.3.8 is a minor feature enhancement release.
+  nuttx-0.3.9 is a minor feature enhancement release.
   This release includes support for the ZiLOG Z8Encore! microcontroller.
   Also included is the initial framework for support for the Z80,
   <a href="http://www.tim-mann.org/xtrs.html">XTRS</a> platform.
@@ -616,8 +616,14 @@
   <td>
     <p>
       <b>Zilog Z8Encore! Microncontroller</b>.
-      This port use the Zilog z8encore000zco development kit, Z8F6403 part, and the Zilog
-      ZDS-II Windows command line tools.
+      This port uses the either:
+    </p>
+    <ul>
+      <li>Zilog z8encore000zco development kit, Z8F6403 part, or</li>
+      <li>Zilog z8f64200100kit development kit, Z8F6423 part</li>
+    </ul>
+    <p>
+      and the Zilog ZDS-II Windows command line tools.
       The development environment is Cygwin under WinXP.
     </p>
     <p>
@@ -981,6 +987,7 @@ buildroot-0.1.0 2007-03-09 &lt;spudmonkey@racsa.co.cr&gt
 nuttx-0.3.10 2008-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 
 	* Add support for the ZiLOG EZ80Acclaim microcontrooler (EZ80F91 chip).
+	* Add configuration for the ZiLOG z8f64200100kit development kit, Z8F6423 part.
 
 pascal-0.1.3 2008-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 
