@@ -447,8 +447,8 @@
       </li>
 
       <li><code>arch/z80/include/z8</code> and <code>arch/z80/src/z8</code>:
-        The Z8Encore! port use the Zilog z8encore000zco
-        development kit, Z8F6403 part, and the Zilog ZDS-II Windows command line
+        The Z8Encore! port uses either the ZiLOG z8encore000zco development kit, Z8F6403 part,
+        or the z8f64200100kit development kit, Z8F6423 part with the Zilog ZDS-II Windows command line
         tools.  The development environment is Cygwin under WinXP.
         This port is in progress and will be released in a future NuttX release.
       </li>
@@ -653,6 +653,12 @@
   <li><code>configs/z8encore000zco</code>
     z8Encore! Microcontroller.  This port use the Zilog z8encore000zco
     development kit, Z8F6403 part, and the Zilog ZDS-II Windows command line
+    tools.  The development environment is Cygwin under WinXP.
+  </li>
+
+  <li><code>configs/z8encore000zco</code>
+    z8Encore! Microcontroller.  This port use the Zilog z8f64200100kit
+    development kit, Z8F6423 part, and the Zilog ZDS-II Windows command line
     tools.  The development environment is Cygwin under WinXP.
   </li>
 
