@@ -348,6 +348,11 @@ configs/z8encore000zco
     development kit, Z8F6403 part, and the Zilog ZDS-II Windows command line
     tools.  The development environment is Cygwin under WinXP.
 
+configs/z8f64200100kit
+    z8Encore! Microcontroller.  This port use the Zilog z8f64200100kit
+    development kit, Z8F6423 part, and the Zilog ZDS-II Windows command line
+    tools.  The development environment is Cygwin under WinXP.
+
 configs/z80sim
     z80 Microcontroller.  This port uses a Z80 instruction set simulator.
     That simulator can be found in the NuttX CVS at
