@@ -350,3 +350,4 @@
 0.3.10 2008-xx-xx Gregory Nutt <spudmonkey@racsa.co.cr>
 
 	* Add support for the ZiLOG EZ80Acclaim microcontrooler (EZ80F91 chip).
+	* Add configuration for the ZiLOG z8f64200100kit development kit, Z8F6423 part.
